# website

./: .gitignore  Cargo.toml  LICENSE  Trunk.toml  build.sh  index.html  netlify.toml
blog_gen/: Cargo.toml
blog_gen/src/: main.rs
blogs/: deploying-trunk-on-netlify-wasm32-unknown-unknown.md  midlife-crisis.md  my-first-post.md  my-second-post.md  optimizing-rbn-dev-for-size-part-2-removing-the-bloat.md  optimizing-rbn-dev-for-size.md
dist-netlify-prod/: index.html  rasm-1d0be69cefab13f7.js  rasm-1d0be69cefab13f7_bg.wasm  rasm-7955d11d81f60bbe.js  rasm-7955d11d81f60bbe_bg.wasm  rasm-c0b050815efe2f48.js  rasm-c0b050815efe2f48_bg.wasm
dist-netlify-prod/public/blogs/: tags.json
dist-prod/: index.html  rasm-bdc148f0bc53f539.js  rasm-bdc148f0bc53f539_bg.wasm
dist-prod/public/blogs/: index.json  tags.json
public/blogs/: index.json  midlife-crisis.md  my-first-post.html  my-first-post.md  my-second-post.md  optimizing-rbn-dev-for-size-part-2-removing-the-bloat.md  optimizing-rbn-dev-for-size.md  optimizing-rbn.dev-for-size.md  tags.json
ratzilla_app/: Cargo.toml  README.md  Trunk.toml  index.html
ratzilla_app/.cargo/: config.toml
ratzilla_app/src/: app.rs  main.rs
ratzilla_app/src/app/: about.rs  blog.rs  displays.rs  intro.old  intro.rs  markdown_renderer.rs  popstate_listener.rs  splash.rs  tool_mutation_observer.rs  tui_helpers.rs  web_sys_helpers.rs
ratzilla_app/src/app/tools/: dom_scanner.rs  mod.rs  mutation_observer.rs  window_scanner.rs
scripts/: build_blog.sh  release-netlify.sh
src/: app.rs  main.rs
src/app/: blog.rs  displays.rs  intro.rs  splash.rs
