[package]
name = "blog_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.2"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
