[package]
name = "rasm"
version = "0.1.0"
authors = ["0x01d <0x@01d.gg>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["unstable-widget-ref"] }
color-eyre = "0.6.3"
ratzilla = { git = "https://github.com/junkdog/ratzilla.git", branch="mouse-grid-coords" }
tachyonfx = { version = "0.13.0", default-features = false, features = ["web-time"] }
web-time = "1.0"
web-sys = { version = "0.3.77",features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Geolocation",
    "Permissions",
    "RtcPeerConnection",
    "console",
    "BatteryManager",
    "MediaDevices",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "History",
    "EventListener",
    "Event",
    "PopStateEvent",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "HtmlCollection",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
]} 
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"
gloo-net = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11.1"
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
debug = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit
panic = "abort"         # Reduce panic handling code
strip = true            # Strip symbols

[unstable]
# Requires the rust-src component. `rustup +nightly component add rust-src`
build-std = ["std", "panic_abort"]
build-std-features = ["panic_immediate_abort", "optimize_for_size"]
