[package]
name = "rbn-dev"
version = "0.1.0"
authors = ["0x01d <work@rbn.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["unstable-widget-ref"] }
ratzilla = { git = "https://github.com/junkdog/ratzilla.git", branch="mouse-grid-coords" }
tachyonfx = { version = "0.13.0", default-features = false, features = ["web-time"] }
web-time = "1.0"
web-sys = { version = "0.3.77",features = [
    "Window",
    "Navigator",
    "Response",
    "History",
    "EventListener",
    "Event",
    "PopStateEvent",
]} 
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"
gloo-net = "0.6.0"
flume = "0.11.1"
pulldown-cmark = "0.13"

[features]
default = []
debug = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit
panic = "abort"         # Reduce panic handling code
strip = true            # Strip symbols

[unstable]
# Requires the rust-src component. `rustup +nightly component add rust-src`
build-std = ["std", "panic_abort"]
build-std-features = ["panic_immediate_abort", "optimize_for_size"]
