[package]
name = "rbn-dev"
version = "0.1.0"
authors = ["0x01d <work@rbn.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["unstable-widget-ref"] }
ratzilla = { git = "https://github.com/junkdog/ratzilla.git", branch="mouse-grid-coords" }
web-time = "1.0"
web-sys = { version = "0.3.77",features = [
    "Window",
    "Navigator",
    "Response",
    "History",
    "EventListener",
    "Event",
    "PopStateEvent",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
]} 
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.50"
gloo = { version = "0.11.0", default-features = false, features = ["events"] }
flume = "0.11.1"
pulldown-cmark = "0.13"

[features]
default = []
debug = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"         # Optimize for size
lto = "fat"             # Link-time optimization
codegen-units = 1       # Single codegen unit
panic = "abort"         # Reduce panic handling code
strip = true            # Strip symbols
